# Exercises `#[rusm_rs::handlers]`: a module of `pub fn action(Request, Params) -> Response`
# becomes a per-request HTTP handler component (the host dispatches the matched action).
# Built for wasm32-wasip2 to prove the macro + http::serve_request compile and link the
# actor world. No `wit/` dir (the macro inlines it).
#   cargo build --target wasm32-wasip2 --release
[workspace]

[package]
name = "handlers-demo"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "handlers_demo"

[profile.release]
opt-level = "z"
strip = true

[dependencies]
rusm-rs = { path = "../../../../rusm-rs" }
wit-bindgen = "0.46"
