# A LEAN wasi:http component: the raw wasi:http bindings (wasip2), no actor world.
# Like http-hello but with no `rusm:runtime` import at all — shows the host's serving
# ceiling for a bare wasi:http guest. Built for wasm32-wasip2, checked in:
#   cargo build --target wasm32-wasip2 --release
#   cp target/wasm32-wasip2/release/http_lean.wasm ../http_lean.wasm
[package]
name = "http-lean"
version = "0.0.0"
edition = "2021"

[dependencies]
wasip2 = "1.0.3"

[lib]
crate-type = ["cdylib"]
name = "http_lean"
path = "src/lib.rs"

[workspace]
