# A broker built on `rusm_rs::pubsub::Topics` — proves the primitive (keyed fan-out
# + monitor-prune) and shows how little a broker component contains. Built for
# wasm32-wasip2, checked in.
#   cargo build --target wasm32-wasip2 --release
#   cp target/wasm32-wasip2/release/pubsub_broker.wasm ../pubsub_broker.wasm
[workspace]

[package]
name = "pubsub-broker"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "pubsub_broker"

[profile.release]
opt-level = "z"
strip = true

[dependencies]
rusm-rs = { path = "../../../../rusm-rs" }
wit-bindgen = "0.46"
