# A supervised child: announces its pid to the registered "collector", then waits
# to be killed — the supervisor restarts it. Built for wasm32-wasip2; checked in.
#   cargo build --target wasm32-wasip2 --release
#   cp target/wasm32-wasip2/release/rs_flaky.wasm ../rs_flaky.wasm
[workspace]
[package]
name = "rs-flaky"
version = "0.0.0"
edition = "2021"
publish = false
[lib]
crate-type = ["cdylib"]
name = "rs_flaky"
[profile.release]
opt-level = "z"
strip = true
[dependencies]
rusm-rs = { path = "../../../../rusm-rs" }
wit-bindgen = "0.46"
